<resources>
    <string name="app_name">Carpe Hora</string>
    <string name="log_activity">Log Activity</string>
    <string name="start_time">Start</string>
    <string name="end_time">End</string>
    <string name="activity">Activity</string>
    <string name="complete">Complete</string>
    <string name="sign_out">Sign out</string>
    <string name="acct_manage">Manage Account</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="app_logo">Carpe Hora Logo</string>
    <string name="today">Today</string>
    <string name="log_now">Log Now</string>
    <string name="hello_world">Hello Square World!</string>
</resources>