<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:exported="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <android.widget.Space
            android:layout_width="match_parent"
            android:layout_height="26dp" />

        <TextView
            android:id="@+id/log_activity_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_activity"
            android:textAlignment="center"
            android:textSize="20sp" />

        <android.widget.Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/start_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_time"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <NumberPicker
                    android:id="@+id/start_np"
                    android:layout_width="match_parent"
                    android:layout_height="80dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/end_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/end_time"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <NumberPicker
                    android:id="@+id/end_np"
                    android:layout_width="match_parent"
                    android:layout_height="80dp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/activity_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <NumberPicker
            android:id="@+id/activity_np"
            android:layout_width="match_parent"
            android:layout_height="80dp" />

        <Button
            android:id="@+id/complete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complete" />

        <android.widget.Space
            android:layout_width="match_parent"
            android:layout_height="22dp" />
    </LinearLayout>
</ScrollView>